namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: k8-ns
  labels:
    project: devops
