pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
  namespace: k8-ns
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
