DaemonSet.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mavenwebappdm
  labels:
    app: mavenwebappdm
  namespace: k8-ns
spec:
  selector:
    matchLabels:
      app: mavenwebappdm
  template:
    metadata:
      labels:
        app: mavenwebappdm
    spec:
      containers:
      - name: mavenwebappdm
        image: dockerhandson/maven-web-application:1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mavenwebappdm
  namespace: k8-ns
  labels:
    app: mavenwebappdm
spec:
  type: NodePort
  selector:
    app: mavenwebappdm
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30030
