Deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mavenwebappdp
  labels:
    app: mavenwebappdp
  namespace: k8-ns
spec:
    replicas: 3
    strategy:
      type: Recreate
    selector:
      matchLabels:
        app: mavenwebappdp
    template:
      metadata:
        labels:
          app: mavenwebappdp
      spec:
        containers:
        - name: mavenwebappdp
          image: dockerhandson/maven-web-application:1
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mavenwebappdp
  namespace: k8-ns
  labels:
    app: mavenwebappdp
spec:
  type: NodePort
  selector:
    app: mavenwebappdp
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30030
