Liviness_Readiness_pythonapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python
  labels:
    app: python
  namespace: k8-ns
spec:
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
      - name: python
        image: dockerhandson/python-flask-api:2
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 400m
            memory: 512Mi
          limits:
            cpu: 1
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: python
  namespace: k8-ns
  labels:
    app: pyhton
spec:
  type: NodePort
  selector:
    app: python
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30030
