replication-controller.yml
apiVersion: v1
kind: Service
metadata:
  name: mavenwebapprc
  namespace: k8-ns
  labels:
    app: mavenwebapprc
spec:
  type: NodePort
  selector:
    app: mavenwebapprc
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30030
