replicationset.yml
apiVersion: v1
kind: Service
metadata:
  name: mavenwebapprs
  namespace: k8-ns
  labels:
    app: mavenwebapprs
spec:
  type: NodePort
  selector:
    app: mavenwebapprs
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30030
