service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginxsvc
  namespace: k8-ns
  labels:
    app: nginxsvc
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30010
