springapp_mongo_statefulset.yml
apiVersion: apps/v1 # Spring app Deployment
kind: Deployment
metadata:
  name: springapp
  namespace: k8-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springapp
  template:
    metadata:
      name: springapp
      labels:
        app: springapp
    spec:
      containers:
      - name: springapp
        image: salapalalokesh/springboot-mongo:latest
        ports:
        - containerPort: 8080
        resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              cpu: 1
              memory: "512Mi"
---
#Spring App Service
apiVersion: v1
kind: Service
metadata:
  name: springappsvc
  labels:
    app: springapp
  namespace: k8-ns
spec:
  type: NodePort
  selector:
    app: springapp
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30010
---
#Mongo DB ReplicationSet

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: k8-ns
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongosvc
  replicas: 3
  template:
    metadata:
      name: mongodb
      labels:
        app: mongodb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: 400m
            memory: 512Mi
          limits:
            cpu: 400m
            memory: 1Gi
        volumeMounts:
        - name: mongodb-pvc-claim
          mountPath: "/data/db"
  volumeClaimTemplates:
  - metadata:
      name: mongodb-pvc-claim
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi

---
#Mongo DB Service

apiVersion: v1
kind: Service
metadata:
  name: mongosvc
  labels:
    app: mongodb
  namespace: k8-ns
spec:
  selector:
    app: mongodb
  clusterIP: None
  ports:
  - port: 27017
    targetPort: 27017
