NetworkPolicies_ingress.yml
piVersion: apps/v1 # Spring app Deployment
kind: Deployment
metadata:
  name: springapp
  namespace: k8-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springapp
  template:
    metadata:
      name: springapp
      labels:
        app: springapp
    spec:
      containers:
      - name: springapp
        image: salapalalokesh/springboot-mongo:latest
        ports:
        - containerPort: 8080
        resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              cpu: 1
              memory: "512Mi"
---
#Spring App Service
apiVersion: v1
kind: Service
metadata:
  name: springappsvc
  labels:
    app: springapp
  namespace: k8-ns
spec:
  type: NodePort
  selector:
    app: springapp
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30010
---
#Mongo DB Service

apiVersion: v1
kind: Service
metadata:
  name: mongosvc
  labels:
    app: mongodb
  namespace: k8-ns
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: springapp-network-policy
  namespace: k8-ns
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - nameSelector:
        matchLabels:
          name: default # to add ns kubectl label ns default name=default. If pod is in another namespace.
    - podSelector:
        matchLabels:
          app: springapp
    ports:
    - protocol: TCP
      port: 27017
